2002-04-30  Paolo Maggi  <maggi@athena.polito.it>

	* gedit-ui.xml: added an icon to Help->Contents

2002-04-29  Miles Lane  <miles@megapathdsl.net>

	* Add "#include <string.h>" to gnome-recent-util.c in order
	  to fix the build.  Instructed to do so by Chema.  :)

2002-04-29  James Willcox  <jwillcox@cs.indiana.edu>

	* Makefile.am:  Added a bunch of new stuff for gnome-recent (recent
	files code)
	* gnome-recent-model.[ch], gnome-recent-view.[ch],
	gnome-recent-view-bonobo.[ch], gnome-recent-util.[ch],
	gnome-recent-marshal.list:
	All new files, replaces the old recent files system with a new
	model-view system.
	* gedit-file.c (gedit_file_open_recent):  Small changes to cope with
	gnome-recent stuff
	* gedit-mdi.c: ditto
	* gedit-recent.[ch]:  Essentially, these are new, even though they
	existed before.  This is just an accessor for the gnome-recent
	model now.

	All of this stuff should fix bug #76641 (problems when FAM isn't
	available).

2002-04-23  Federico Mena Quintero  <federico@ximian.com>

	* gedit-document.c (gedit_document_save_as_real): Properly handle
	file permissions.  Fixes bug #76196 (patch approved by Chema
	Celorio).

2002-04-22  Paolo Maggi  <maggi@athena.polito.it>

	* gedit-view.[ch] (gedit_view_set_font)(gedit_view_set_colors):
	added the def parameter

	* gedit-mdi.c (gedit_mdi_update_ui_according_to_preferences):
	removed unused code and fixed bug #76407

2002-04-20  Paolo Maggi  <maggi@athena.polito.it>

	* dialogs/gedit-preferences-dialog.c: fixed bug #79277

2002-04-20  Abel Cheung  <maddog@linux.org.hk>

	* gedit-commands.c: Added translator_credits.

2002-04-18  James Willcox  <jwillcox@cs.indiana.edu>

	* gedit-ui.xml:  Change the shortcut for the plugin manager to be "M"
	instead of "P" (which conflicted with the shortcut for "Paste")

2002-04-17  Paolo Maggi  <maggi@athena.polito.it>

	* gedit-menus.[ch] (gedit_menus_add_menu_item_toggle): new function
	(gedit_menus_add_menu_item_toggle_all): ditto
	